--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
           </div>
         </div>
         <div id="raya"></div>
+        <div class="today">
+          <a id="enlace" target="_blank"><div class="boton-hoy">Mas detalles</div></a>
+        </div>
       </div>
     </main>
     <script type="module" src="app.js"></script>
-
     <script type="module" src="OpenWeather.js"></script>
   </body>
 </html>
