One tag commented on HTML file, nothing more

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="lugar-temp">
           <div id="clima-rango-temp"></div>
           <h2 id="ubicacion"></h2>
-          <p id="departamento"></p>
+          <!--<p id="departamento"></p>-->
         </div>
       </div>
       <div class="contenedor">
